--- a/WebApplication2/Views/Kategori/Index.cshtml
+++ b/WebApplication2/Views/Kategori/Index.cshtml
@@ -40,5 +40,5 @@
 
 </table>
 
-<a href="/Kategori/KategoriEkle/" class="btn btn-primary">Yeni Kategori  </a>
+<a href="/Kategori/KategoriEkle/" class="btn btn-primary">Yeni Kategori Ekle </a>
 
