--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -33,7 +33,7 @@
                 }
                 .sidebar ul li:hover {
                     padding: 15px;
-                    background-color:dimgrey;
+                    background-color:dodgerblue;
                 }
 
             .sidebar a {
