--- a/WebApplication2/Views/Kitap/KitapEkle.cshtml
+++ b/WebApplication2/Views/Kitap/KitapEkle.cshtml
@@ -18,9 +18,9 @@
 
 <div style="margin-top:15px">
     <label>Kitap Kategori</label>
-    @Html.TextBoxFor(y => y.YAZAR, new { @class = "form-check" })
+    @Html.TextBoxFor(y => y.KATEGORI, new { @class = "form-check" })
 </div>
-    </div>
+    
 
 
     <div style="margin-top:15px">
@@ -49,6 +49,6 @@
         <button class="btn-info">Kitap Ekle</button>
 
 
-    </div>
+   
 
 </form>
