--- a/WebApplication2/Views/Kitap/Index.cshtml
+++ b/WebApplication2/Views/Kitap/Index.cshtml
@@ -8,11 +8,24 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <h2 style="text-align:center;">Kitaplar</h2>
 
-<div style="margin-bottom:15px;margin-top:15px;" >
 
-    <input type="text" class="form-control" placeholder="  Aranacak kitabi giriniz....."/>
 
-</div>
+
+
+
+
+@using (Html.BeginForm("Index", "Kitap", FormMethod.Get))
+{
+    <div style="margin-bottom:15px;margin-top:15px;">
+
+        <b>Aranacak Kitap Adini Girin :</b> @Html.TextBox("p")
+        <input  type="submit" value="Ara"/>
+
+    </div>
+
+}
+
+
 
 <table class="table table-bordered">
 
@@ -43,7 +56,7 @@
         </tr>
 
     }
-    
+
 </table>
 
 <a href="/Kitap/KitapEkle/" class="btn bg-success">Yeni Kitap Ekle</a>
