--- a/WebApplication2/Views/Kitap/Index.cshtml
+++ b/WebApplication2/Views/Kitap/Index.cshtml
@@ -26,6 +26,7 @@
 }
 
 
+<h2> Kayitli Uyeler</h2>
 
 <table class="table table-bordered">
 
@@ -54,7 +55,6 @@
             <td><a href="/Kitap/KitapSil/@k.ID" class="btn bg-danger">Sil</a></td>
             <td><a href="/Kitap/KitapGetir/@k.ID" class="btn bg-success">Guncelle</a></td>
         </tr>
-
     }
 
 </table>
