--- a/WebApplication2/Views/Kitap/KitapEkle.cshtml
+++ b/WebApplication2/Views/Kitap/KitapEkle.cshtml
@@ -22,7 +22,6 @@
 </div>
     
 
-
     <div style="margin-top:15px">
         <label>Kitap Yazar</label>
         @Html.TextBoxFor(y => y.YAZAR, new { @class = "form-check" })
@@ -49,6 +48,7 @@
         <button class="btn-info">Kitap Ekle</button>
 
 
-   
+    </div>
+
 
 </form>
