--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -55,8 +55,8 @@
             <li><a href ="/Kategori/Index/">Kategoriler</a></li>
             <li><a href="/Kitap/Index/">Kitaplar</a></li>
             <li><a href="/Yazar/Index/">Yazarlar</a></li>
-            <li><a href="#">Uyeler</a></li>
-            <li><a href="#">Personeller</a></li>
+            <li><a href="/Uye/Index/">Uyeler</a></li>
+            <li><a href="/Personel/Index/">Personeller</a></li>
             <li><a href="#">Odunc Kitap Ver</a></li>
             <li><a href="#">Odunc Kitap Al</a></li>
             <li><a href="#">Kasa</a></li>
