--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -57,7 +57,7 @@
             <li><a href="/Yazar/Index/">Yazarlar</a></li>
             <li><a href="/Uye/Index/">Uyeler</a></li>
             <li><a href="/Personel/Index/">Personeller</a></li>
-            <li><a href="#">Odunc Kitap Ver</a></li>
+            <li><a href="/Odunc/OduncVer/">Odunc Kitap Ver</a></li>
             <li><a href="#">Odunc Kitap Al</a></li>
             <li><a href="#">Kasa</a></li>
             <li><a href="#">Islemler</a></li>
