--- a/WebApplication2/Views/Yazar/YazarGetir.cshtml
+++ b/WebApplication2/Views/Yazar/YazarGetir.cshtml
@@ -35,7 +35,7 @@
 
 
     <div style="margin-bottom:35px"></div>
-    <button class="btn btn-warning">Yazar Bilgisi Ekle</button>
+    <button class="btn btn-warning">Yazar GUNCELLE</button>
 
 
 }
