--- a/WebApplication2/Views/Odunc/OduncVer.cshtml
+++ b/WebApplication2/Views/Odunc/OduncVer.cshtml
@@ -10,6 +10,7 @@ border-radius:9px;
 
 text-align :center;
 
+padding:10px;
 
 ">Kitap Odunc Ver</h2>
 
@@ -26,6 +27,7 @@ text-align :center;
         <label>Kitap ID</label>
         @Html.TextBoxFor(k => k.KITAP, new { @class = "form-control" })
     </div>
+
 
 
     <div style="margin-top:15px">
