--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -46,7 +46,7 @@
             padding: 20px;
         }
     </style>
-    <title>Sidebar Örneği</title>
+    <title>Kutuphane V0.1</title>
 </head>
 <body>
     <div class="sidebar">
@@ -58,7 +58,7 @@
             <li><a href="/Uye/Index/">Uyeler</a></li>
             <li><a href="/Personel/Index/">Personeller</a></li>
             <li><a href="/Odunc/OduncVer/">Odunc Kitap Ver</a></li>
-            <li><a href="#">Odunc Kitap Al</a></li>
+            <li><a href="/Odunc/Index">Odunc Kitap Al</a></li>
             <li><a href="#">Kasa</a></li>
             <li><a href="#">Islemler</a></li>
             <li><a href="#">Ayarlar</a></li>
