--- a/WebApplication2/Views/Odunc/Index.cshtml
+++ b/WebApplication2/Views/Odunc/Index.cshtml
@@ -66,7 +66,7 @@
             <td>@Convert.ToDateTime(k.IADETARIH).ToString("dd/MM//yyyy")</td>
 
             <td><a href="/Odunc/Odunciade/@k.ID" class="btn btn-secondary">Kitabi Iade Et</a></td>
-            <td><a href="/Odunc/Odunciade/@k.ID" class="btn btn-secondary">Kitabi Iade Et</a></td>
+            <td><a href="/Odunc/Odunciade/@k.ID" class="btn btn-secondary">Guncelle</a></td>
         </tr>
     }
 
