--- a/WebApplication2/Views/Kitap/KitapEkle.cshtml
+++ b/WebApplication2/Views/Kitap/KitapEkle.cshtml
@@ -46,9 +46,10 @@
     <div style="margin-top:15px">
 
         <button class="btn-info">Kitap Ekle</button>
-
-
     </div>
 
+
+    <input type="hidden" name="Durum" value="True" />
+    
 
 </form>
