--- a/WebApplication2/Views/Kitap/KitapGetir.cshtml
+++ b/WebApplication2/Views/Kitap/KitapGetir.cshtml
@@ -3,9 +3,18 @@
     ViewBag.Title = "KitapGetir";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
-}
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<h2>KitapGetir</h2>
+<h2 style="
+
+    max-height:100px; 
+    background-color:darkcyan;
+    border-radius:9px;
+    text-align :center;
+    padding:10px;
+    " >
+    KitapGetir
+</h2>
 
 @using (Html.BeginForm("KitapGuncelle", "Kitap", FormMethod.Post))
 {
@@ -55,5 +64,6 @@
     <div style="margin-bottom:35px"></div>
     <button class="btn btn-warning"> Guncelle</button>
 
+    <input type="hidden" name="Durum" value="True" />
 
 }
