--- a/WebApplication2/Views/Odunc/Index.cshtml
+++ b/WebApplication2/Views/Odunc/Index.cshtml
@@ -6,6 +6,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
@@ -21,7 +22,7 @@
     backdrop-filter: blur(1000px);
     
     
-   ">Odunc Kitap Al</h2>
+   ">Odunc Kitap Listesi</h2>
 
 
 @using (Html.BeginForm("Index", "Kitap", FormMethod.Get))
@@ -51,8 +52,8 @@
         <td>Personel</td>
         <td>Alis Tarihi</td>
         <td>Iade Tarihi</td>
-        <td>Sil</td>
-        <td>Guncelle</td>
+        <td>Kitap Iade Et</td>
+        
     </tr>
 
     @foreach (var k in Model)
@@ -65,8 +66,8 @@
             <td>@Convert.ToDateTime(k.ALISTARIH).ToString("dd/MM//yyyy")</td>
             <td>@Convert.ToDateTime(k.IADETARIH).ToString("dd/MM//yyyy")</td>
 
-            <td><a href="/Odunc/Odunciade/@k.ID" class="btn btn-secondary">Kitabi Iade Et</a></td>
-            <td><a href="/Odunc/Odunciade/@k.ID" class="btn btn-secondary">Guncelle</a></td>
+            <td><a href="/Odunc/OduncIade/@k.ID" class="btn btn-secondary">Kitabi Iade Et</a></td>
+            
         </tr>
     }
 
