--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -16,7 +16,7 @@
 
         .sidebar {
             height: 100%;
-            width: 250px;
+            width: 200px;
             position: fixed;
             top: 0;
             left: 0;
@@ -52,15 +52,20 @@
     <div class="sidebar">
         <ul>
             <li><a href="#">Anasayfa</a></li>
-            <li><a href ="/Kategori/Index/">Kategoriler</a></li>
+            <li><a href="/Kategori/Index/">Kategoriler</a></li>
             <li><a href="/Kitap/Index/">Kitaplar</a></li>
             <li><a href="/Yazar/Index/">Yazarlar</a></li>
             <li><a href="/Uye/Index/">Uyeler</a></li>
             <li><a href="/Personel/Index/">Personeller</a></li>
             <li><a href="/Odunc/OduncVer/">Odunc Kitap Ver</a></li>
             <li><a href="/Odunc/Index">Odunc Kitap Al</a></li>
+            <li><a href="/istatistik/Index">Istatistik</a></li>
             <li><a href="#">Kasa</a></li>
+            <li><a href="/istatistik/Hava/">Hava Durumu</a></li>
+            <li><a href="/istatistik/HavaKart/">Hava Kartlari</a></li>
+            <li><a href="/istatistik/Galeri/">Galeri</a></li>
             <li><a href="#">Islemler</a></li>
+            <li><a href="/vitrin/Index">Vitrin</a></li>
             <li><a href="#">Ayarlar</a></li>
             <li><a href="#">Cikis</a></li>
         </ul>
