--- a/WebApplication2/Views/Yazar/Index.cshtml
+++ b/WebApplication2/Views/Yazar/Index.cshtml
@@ -10,25 +10,27 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<table class="table table-bordered">
-    <tr>
-        <td>ID</td>
-        <td>AD</td>
-        <td>SOYAD</td>
-        <td>DETAY</td>
+<table style="background-color:rgb(252,178,22)" class="table table-striped" >
+    <tr >
+        <td style="background-color:rgb(252,178,22)">ID</td>
+        <td style="background-color:rgb(252,178,22)">AD</td>
+        <td style="background-color:rgb(252,178,22)">SOYAD</td>
+        <td style="background-color:rgb(252,178,22)">DETAY</td>
     </tr>
 
 
     @foreach (var yzr in Model)
     {
-        <tr>
+        <tr > 
             <td>@yzr.ID</td>
             <td>@yzr.AD</td>
             <td>@yzr.SOYAD</td>
             <td>@yzr.DETAY</td>
-            <td>@Html.ActionLink("Sil","YazarSil",new {id = yzr.ID},
-               new {@class= "btn btn-danger",onclick="return confirm('Silmek isityor musunuz')"})</td>
-            <td><a href="/Yazar/YazarGetir/@yzr.ID" class="btn btn-outline-success">Guncelle</a></td>
+            <td>
+                @Html.ActionLink("Sil", "YazarSil", new { id = yzr.ID },
+                       new { @class = "btn btn-danger", onclick = "return confirm('Silmek isityor musunuz')" })
+                        <a href="/Yazar/YazarGetir/@yzr.ID" class="btn btn-outline-success">Guncelle</a>
+                    </td>
         </tr>
     }
 </table>
