--- a/WebApplication2/Views/Yazar/YazarEkle.cshtml
+++ b/WebApplication2/Views/Yazar/YazarEkle.cshtml
@@ -4,28 +4,36 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<h2>YazarEkle</h2>
+<h2 style="
+    background-color:coral;
+    text-align:center;
+    padding:15px;
+    border-radius:9px;
+ 
+    
+    "> YazarEkle</h2>
 
 <form class="form-group" method="post">
     <div></div>
     <div style="margin-top:15px"></div>
     <label>Yazar Adi</label>
-    @Html.TextBoxFor(y => y.AD, new { @class = "form-check" })
+    @Html.TextBoxFor(y => y.AD, new { @class = "form-control" })
+    @Html.ValidationMessageFor(y => y.AD)
 
     <div style="margin-top:15px">
         <label>Yazar Soyadi</label>
-        @Html.TextBoxFor(y => y.SOYAD, new { @class = "form-check" })
+        @Html.TextBoxFor(y => y.SOYAD, new { @class = "form-control" })
     </div>
 
 
     <div style="margin-top:15px">
         <label>Yazar Detay Bilgiler</label>
-        @Html.TextBoxFor(y => y.DETAY, new { @class = "form-check" })
+        @Html.TextBoxFor(y => y.DETAY, new { @class = "form-control" })
     </div>
 
     <div style="margin-top:15px">
         
-        <button class="btn-info">Yazar Ekle</button>
+        <button class="btn btn-info ">Yazar Ekle</button>
 
 
     </div>
