--- a/WebApplication2/Views/istatistik/Galeri.cshtml
+++ b/WebApplication2/Views/istatistik/Galeri.cshtml
@@ -74,7 +74,7 @@
 
     <br />
 
-    <input type="sumbit" name="name" value="kaydet" class="btn btn-warning" />
+    <input type="submit" name="name" value="kaydet" class="btn btn-warning" />
 
 
 </div>
@@ -85,5 +85,6 @@
 
     body {
         background-color: gainsboro;
+       
     }
 </style>
