--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -60,7 +60,7 @@
             <li><a href="/Odunc/OduncVer/">Odunc Kitap Ver</a></li>
             <li><a href="/Odunc/Index">Odunc Kitap Al</a></li>
             <li><a href="/istatistik/Index">Istatistik</a></li>
-            <li><a href="#">Kasa</a></li>
+            <li><a href="istatistik/LinqKart">Linq Kartlar</a></li>
             <li><a href="/istatistik/Hava/">Hava Durumu</a></li>
             <li><a href="/istatistik/HavaKart/">Hava Kartlari</a></li>
             <li><a href="/istatistik/Galeri/">Galeri</a></li>
