--- a/WebApplication2/Views/istatistik/Index.cshtml
+++ b/WebApplication2/Views/istatistik/Index.cshtml
@@ -87,8 +87,8 @@
 
 
         <div class="icon-text">
-            <h3>15896</h3>
-            <p>Sales</p>
+            <h3>87</h3>
+            <p>Kasa</p>
         </div>
         <div class="clearfix"></div>
     </div>
@@ -97,7 +97,7 @@
             <i class="user1"></i>
         </div>
         <div class="icon-text">
-            <h3>5356</h3>
+            <h3>@ViewBag.deger1</h3>
             <p>Toplam Uye</p>
         </div>
         <div class="clearfix"></div>
@@ -107,7 +107,7 @@
             <i class="order"></i>
         </div>
         <div class="icon-text">
-            <h3>26856</h3>
+            <h3>@ViewBag.deger2 </h3>
             <p>Kitap Sayisi</p>
         </div>
         <div class="clearfix"></div>
@@ -117,7 +117,7 @@
             <i class="visit"></i>
         </div>
         <div class="icon-text">
-            <h3>85</h3>
+            <h3>@ViewBag.deger3</h3>
             <p>Emanet Kitaplar</p>
         </div>
         <div class="clearfix"></div>
@@ -179,42 +179,3 @@
     <div class="clearfix"></div>
 </div>
 
-<div class="total-world">
-    <div class="world-map">
-        <div class="alert-close6"> </div>
-        <h3>Sales around world</h3>
-        <p><span class="color1"></span>40%<span class="color2"></span>12%<span class="color3"></span>11%<span class="color4"></span>10%<span class="color5"></span>18%</p>
-        <div class="clearfix"></div>
-        <div id="vmap" style="width: 600px; height: 400px;"></div>
-    </div>
-    <div class="site-report">
-        <div class="alert-close3"> </div>
-        <h3>Durum</h3>
-        <div class="skills-top">
-            <h5>Memnuniyet</h5>
-            <h4>95%</h4>
-            <div class="clearfix"></div>
-            <div class="skills">
-                <div class="skill" style="width:95%"></div>
-            </div>
-        </div>
-        <div class="skills-top">
-            <h5>Guvenilirlik</h5>
-            <h4>68%</h4>
-            <div class="clearfix"></div>
-            <div class="skills">
-                <div class="skill1" style="width:68%"></div>
-            </div>
-        </div>
-        <div class="skills-top">
-            <h5>Haftalik Geri Donus</h5>
-            <h4>89%</h4>
-            <div class="clearfix"></div>
-            <div class="skills">
-                <div class="skill2" style="width:89%"></div>
-            </div>
-        </div>
-        <p>Kutuphane Yonetim Sistemi Yonetici Paneli</p>
-    </div>
-    <div class="clearfix"></div>
-</div>
