--- a/WebApplication2/Views/istatistik/LinqKart.cshtml
+++ b/WebApplication2/Views/istatistik/LinqKart.cshtml
@@ -128,7 +128,7 @@
             <a href="#">
                 <i class="fa fa-oil-can" aria-hidden="true"></i>
                 <div class="ca-content">
-                    <h4 class="ca-main two">29,008</h4>
+                    <h4 class="ca-main two">@ViewBag.deger4</h4>
                     <h3 class="ca-sub two">En Fazla Kitabi Olan Yazar</h3>
                 </div>
             </a>
@@ -158,8 +158,8 @@
 
                 <i class="fa fa-building-o" aria-hidden="true"></i>
                 <div class="ca-content">
-                    <h4 class="ca-main">16,808</h4>
-                    <h3 class="ca-sub">New Companies</h3>
+                    <h4 class="ca-main">@ViewBag.deger5</h4>
+                    <h3 class="ca-sub">En Fazla Kitabi Olan Yayinevi</h3>
                 </div>
             </a>
         </li>
