--- a/WebApplication2/Views/vitrin/Index.cshtml
+++ b/WebApplication2/Views/vitrin/Index.cshtml
@@ -11,7 +11,8 @@
 <html lang="en">
 
 <head>
-
+    <link href="~/webregister/css/style.css" rel="stylesheet" />
+    <link href="~/webregister/css/style.css" rel="stylesheet" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -45,10 +46,13 @@
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Kitaplarimiz</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Hakkimizda</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Hakkimizda</a>/
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Iletisim</a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/Login/GirisYap">Login</a>
                     </li>
                 </ul>
             </div>
