--- a/WebApplication2/Views/Panelim/Index.cshtml
+++ b/WebApplication2/Views/Panelim/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model WebApplication2.Models.Entity.TBLUYELER
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPanel.cshtml";
@@ -8,31 +8,55 @@
 
 
 
-<h2>Burasi Panel Sayfam</h2>
+<h2>Bilgiler</h2>
 
+@using(Html.BeginForm("Index2","Panelim",FormMethod.Post))
+            {
 
 <table class="table table-hover">
     <tr>
-        <td>Mail Adresi :  @HttpContext.Current.User.Identity.Name</td>
+        <td style="font-weight:bold">Mail Adresi :  @HttpContext.Current.User.Identity.Name</td>
     </tr>
     <tr>
-        <td> <label style="font-weight:bold">Ad:</label> @TempData["Ad"].ToString()  </td>
+        <td>
+
+            @Html.TextBoxFor(x => x.ID, new { @class = "form-control" })
+        </td>
     </tr>
-     
+
     <tr>
-        <td> <label style="font-weight:bold;">Soyad:</label> @TempData["Soyad"].ToString()  </td>
+        <td>
+            @Html.TextBoxFor(x => x.AD, new { @class = "form-control" })
+        </td>
     </tr>
+
     <tr>
-        <td> <label style="font-weight:bold"> Kullanici Adi:</label>   @TempData["KullaniciAdi"].ToString()  </td>
+        <td>
+            @Html.TextBoxFor(x => x.SOYAD, new { @class = "form-control" })
+        </td>
     </tr>
+
     <tr>
-        <td><lable style="font-weight:bold"> Sifre:</lable> <input type="text" class="form-control"
-                                                                   
-         value="  @TempData["Sifre"].ToString()"   />                                               
-                                                                 
-      </td>
+        <td>
+            @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control" })
+        </td>
     </tr>
-    <td> <button class="btn btn-warning"> Guncelle </button> </td>
+
+    <tr>
+        <td>
+            @Html.TextBoxFor(x => x.SIFRE, new { @class = "form-control" })
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+           <button class="btn btn-warning">Guncelle </button>
+        </td>
+    </tr>
 
 
 </table>
+
+
+
+            }
