--- a/WebApplication2/Views/Shared/_LayoutPanel.cshtml
+++ b/WebApplication2/Views/Shared/_LayoutPanel.cshtml
@@ -37,11 +37,13 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading">AD SOYAD </div>
             <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action bg-light">PROFILIM</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">MESAJLAR</a>
+                <a href="/Profilim/Index" class="list-group-item list-group-item-action bg-light">PROFILIM</a>
+                <a href="/Mesajlar/Index" class="list-group-item list-group-item-action bg-light">GELEN MESAJLAR</a>
+                <a href="/Mesajlar/Giden" class="list-group-item list-group-item-action bg-light">GIDEN MESAJLAR</a>
+                <a href="/Mesajlar/YeniMesaj" class="list-group-item list-group-item-action bg-light"> YENI MESAJLAR</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">DUYURULAR</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">KITAPLARIM</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">VITRIN</a>
+                <a href="/Panelim/Kitaplarim" class="list-group-item list-group-item-action bg-light">KITAPLARIM</a>
+                <a href="/Vitrin/Index" class="list-group-item list-group-item-action bg-light">VITRIN</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">YARDIM</a>
             </div>
         </div>
@@ -59,7 +61,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#"> Hakkimizda <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="/Vitrin/Index"> Hakkimizda <span class="sr-only">(current)</span></a>
                         </li>
                   
                         <li class="nav-item dropdown">
@@ -67,8 +69,8 @@
                                 Dropdown
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="/Panelim/Index">Hesabım</a>
+                                <a class="dropdown-item" href="">Cikis Yap</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </div>
