--- a/WebApplication2/Views/Login/GirisYap.cshtml
+++ b/WebApplication2/Views/Login/GirisYap.cshtml
@@ -38,13 +38,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 <body>
-    <h1>MVC5 Kutuphane Giris Paneli</h1>
+    <h1>KÜTÜPHANE GİRİŞ</h1>
     <div class=" w3l-login-form">
         <h2>Giris Yap</h2>
         @using (Html.BeginForm("GirisYap", "Login", FormMethod.Post))
         {
             <div class=" w3l-form-group">
-                <label>Kullanici Adi</label>
+                <label>Kullanici Adı</label>
                 <div class="group">
                     <i class="fas fa-user"></i>
                     <input type="text" class="form-control" placeholder="Kullanici Adiniz"
@@ -52,7 +52,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
             </div>
             <div class=" w3l-form-group">
-                <label>Sifre</label>
+                <label>Şifre</label>
                 <div class="group">
                     <i class="fas fa-unlock"></i>
                     <input type="password" class="form-control" placeholder="Sifre"
@@ -60,10 +60,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
             </div>
             <div class="forgot">
-                <a href="#">Sifremi Unuttum</a>
+                <a href="#">Şifremi Unuttum</a>
                 <p><input type="checkbox">Beni Hatirla</p>
             </div>
-            <button type="submit">Giris Yap</button>
+            <button type="submit">Giriş Yap</button>
         }
 
 
@@ -71,7 +71,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <p class=" w3l-register-p">Hesabin yoksa kayit ol !<a href="/KayitOl/Kayit/" class="register"> kayit Ol</a></p>
     </div>
     <footer>
-        <p class="copyright-agileinfo"> &copy; 2023 Tum Haklari Saklidir  | Design by <a href="#">Codecrew__</a></p>
+        <p class="copyright-agileinfo"> &copy; 2023 Tum Haklari Saklidir  | Design by <a href="https://www.instagram.com/codecrew__/?next=%2F">Codecrew__</a></p>
     </footer>
 
 </body>
