--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -12,6 +12,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
+            
         }
 
         .sidebar {
@@ -29,7 +30,7 @@
             }
 
                 .sidebar ul li {
-                    padding: 15px;
+                    padding: 12px;
                 }
                 .sidebar ul li:hover {
                     padding: 15px;
@@ -49,9 +50,9 @@
     <title>Kutuphane V0.1</title>
 </head>
 <body>
-    <div class="sidebar">
+    <div style="overscroll-behavior-x:auto" class="sidebar">
         <ul>
-            <li><a href="#">Anasayfa</a></li>
+            
             <li><a href="/Kategori/Index/">Kategoriler</a></li>
             <li><a href="/Kitap/Index/">Kitaplar</a></li>
             <li><a href="/Yazar/Index/">Yazarlar</a></li>
@@ -59,12 +60,12 @@
             <li><a href="/Personel/Index/">Personeller</a></li>
             <li><a href="/Odunc/OduncVer/">Odunc Kitap Ver</a></li>
             <li><a href="/Odunc/Index">Odunc Kitap Al</a></li>
+            <li><a href="/Duyurular/Index">Duyurular</a></li>
             <li><a href="/istatistik/Index">Istatistik</a></li>
-            <li><a href="istatistik/LinqKart">Linq Kartlar</a></li>
             <li><a href="/istatistik/Hava/">Hava Durumu</a></li>
             <li><a href="/istatistik/HavaKart/">Hava Kartlari</a></li>
             <li><a href="/istatistik/Galeri/">Galeri</a></li>
-            <li><a href="#">Islemler</a></li>
+         
             <li><a href="/vitrin/Index">Vitrin</a></li>
             <li><a href="#">Ayarlar</a></li>
             <li><a href="#">Cikis</a></li>
