--- a/WebApplication2/Views/Shared/_LayoutPanel.cshtml
+++ b/WebApplication2/Views/Shared/_LayoutPanel.cshtml
@@ -41,9 +41,10 @@
                 <a href="/Mesajlar/Index" class="list-group-item list-group-item-action bg-light">GELEN MESAJLAR</a>
                 <a href="/Mesajlar/Giden" class="list-group-item list-group-item-action bg-light">GIDEN MESAJLAR</a>
                 <a href="/Mesajlar/YeniMesaj" class="list-group-item list-group-item-action bg-light"> YENI MESAJLAR</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">DUYURULAR</a>
+                <a href="/Duyurular/Index" class="list-group-item list-group-item-action bg-light">DUYURULAR</a>
                 <a href="/Panelim/Kitaplarim" class="list-group-item list-group-item-action bg-light">KITAPLARIM</a>
                 <a href="/Vitrin/Index" class="list-group-item list-group-item-action bg-light">VITRIN</a>
+                <a href="/Panelim/LogOut/" class="list-group-item list-group-item-action bg-light">Cikis Yap</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">YARDIM</a>
             </div>
         </div>
@@ -70,7 +71,7 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/Panelim/Index">Hesabım</a>
-                                <a class="dropdown-item" href="">Cikis Yap</a>
+                                <a  href="/Panelim/LogOut">Cikis Yap</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </div>
