--- a/WebApplication2/Views/istatistik/Index.cshtml
+++ b/WebApplication2/Views/istatistik/Index.cshtml
@@ -14,15 +14,15 @@
 <script src="~/web2/js/jquery.vmap.js"></script>
 <link href="~/web2/css/bootstrap.css" rel="stylesheet" />
 <link href="~/web2/css/jqvmap.css" rel="stylesheet" />
-<h2 style=" text-align:center;
-            max-height:130px;
-            background-color:aquamarine;
-            padding:30px;
-            border-radius:9px;
-            margin-left : 30px;
+<h2  style="
 
+    text-align:center;
+    background-color:cadetblue;
+    padding:15px;
+    border-radius:9px;
+    margin-top:15px;
 
- ">
+    ">
     Istatistik
 </h2>
 <link href="~/web2/css/nav.css" rel="stylesheet" />
