--- a/WebApplication2/webpanel/css/simple-sidebar.css
+++ b/WebApplication2/webpanel/css/simple-sidebar.css
@@ -5,6 +5,7 @@
  */
 body {
   overflow-x: hidden;
+  
 }
 
 #sidebar-wrapper {
@@ -16,21 +17,26 @@ body {
   transition: margin .25s ease-out;
 }
 
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
-}
+    #sidebar-wrapper .sidebar-heading {
+        padding: 0.875rem 1.25rem;
+        font-size: 1.2rem;
+        background-color: purple;
+        background-color: purple;
+    }
 
 #sidebar-wrapper .list-group {
   width: 15rem;
+
 }
 
 #page-content-wrapper {
   min-width: 100vw;
+  
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
+    margin-left: 0;
+  
 }
 
 @media (min-width: 768px) {
