--- a/WebApplication2/Views/Kitap/Index.cshtml
+++ b/WebApplication2/Views/Kitap/Index.cshtml
@@ -6,54 +6,64 @@
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<h2 style="text-align:center;">Kitaplar</h2>
+<h2 style="
+    text-align:center;
+    background-color:cadetblue;
+    padding:15px;
+    border-radius:9px;
+    
+    
+    
+    ">Kitaplar</h2>
 
 
-
-
-@using (Html.BeginForm("Index", "Kitap", FormMethod.Get))
-{
-    <div style="margin-bottom:15px;margin-top:15px;">
-
-        <b>Aranacak Kitap Adini Girin :</b> @Html.TextBox("p")
-        <input  type="submit" value="Ara"/>
-
-    </div>
-
-}
-
-
-<h2> Kayitli Uyeler</h2>
-
-<table class="table table-bordered">
-
-    <tr>
-        <td>ID</td>
-        <td>Kitap Adi</td>
-        <td>Kitap Yazari</td>
-        <td>Kategori</td>
-        <td>Basim Yili</td>
-        <td>Yayinevi</td>
-        <td>Sayfa</td>
-        <td>Durum</td>
-    </tr>
-
-    @foreach (var k in Model)
+<body>
+    @using (Html.BeginForm("Index", "Kitap", FormMethod.Get))
     {
-        <tr>
-            <td>@k.ID</td>
-            <td>@k.AD</td>
-            <td>@k.YAZAR</td>
-            <td>@k.KATEGORI</td>
-            <td>@k.BASIMYIL</td>
-            <td>@k.YAYINEVI</td>
-            <td>@k.SAYFA</td>
-            <td>@k.DURUM</td>
-            <td><a href="/Kitap/KitapSil/@k.ID" class="btn bg-danger">Sil</a></td>
-            <td><a href="/Kitap/KitapGetir/@k.ID" class="btn bg-success">Guncelle</a></td>
-        </tr>
+        <div style="margin-bottom:15px;margin-top:15px;">
+
+            <b>Aranacak Kitap Adini Girin :</b> @Html.TextBox("p")
+            <input type="submit" value="Ara" />
+
+        </div>
+
     }
 
-</table>
 
-<a href="/Kitap/KitapEkle/" class="btn bg-success">Yeni Kitap Ekle</a>
+    <h2> Kayitli Kitaplar</h2>
+
+    <table class="table table-bordered">
+
+        <tr>
+            <td>ID</td>
+            <td>Kitap Adi</td>
+            <td>Kitap Yazari</td>
+            <td>Kategori</td>
+            <td>Basim Yili</td>
+            <td>Yayinevi</td>
+            <td>Sayfa</td>
+            <td>Durum</td>
+        </tr>
+
+        @foreach (var k in Model)
+        {
+            <tr>
+                <td>@k.ID</td>
+                <td>@k.AD</td>
+                <td>@k.YAZAR</td>
+                <td>@k.KATEGORI</td>
+                <td>@k.BASIMYIL</td>
+                <td>@k.YAYINEVI</td>
+                <td>@k.SAYFA</td>
+                <td>@k.DURUM</td>
+                <td><a href="/Kitap/KitapSil/@k.ID" class="btn bg-danger">Sil</a></td>
+                <td><a href="/Kitap/KitapGetir/@k.ID" class="btn bg-success">Guncelle</a></td>
+            </tr>
+        }
+
+    </table>
+
+    <a href="/Kitap/KitapEkle/" class="btn bg-success">Yeni Kitap Ekle</a>
+
+</body>
+
