--- a/WebApplication2/Views/Panelim/Index.cshtml
+++ b/WebApplication2/Views/Panelim/Index.cshtml
@@ -6,57 +6,52 @@
 
 
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffc09f;
+        }
 
-
-<h2>Bilgiler</h2>
-
-@using(Html.BeginForm("Index2","Panelim",FormMethod.Post))
-            {
-
-<table class="table table-hover">
-    <tr>
-        <td style="font-weight:bold">Mail Adresi :  @HttpContext.Current.User.Identity.Name</td>
-    </tr>
-    <tr>
-        <td>
-
-            @Html.TextBoxFor(x => x.ID, new { @class = "form-control" })
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            @Html.TextBoxFor(x => x.AD, new { @class = "form-control" })
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            @Html.TextBoxFor(x => x.SOYAD, new { @class = "form-control" })
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control" })
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-            @Html.TextBoxFor(x => x.SIFRE, new { @class = "form-control" })
-        </td>
-    </tr>
-
-    <tr>
-        <td>
-           <button class="btn btn-warning">Guncelle </button>
-        </td>
-    </tr>
-
-
-</table>
-
-
-
-            }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h2 class="page-title">Bilgiler</h2>
+        @using (Html.BeginForm("Index2", "Panelim", FormMethod.Post, new { @class = "form-horizontal" }))
+        {
+            <div class="form-group">
+                <label for="MailAdresi" class="control-label">Mail Adresi:</label>
+                <p class="form-control-static">@HttpContext.Current.User.Identity.Name</p>
+            </div>
+            <div class="form-group">
+                <label for="ID" class="control-label">ID:</label>
+                @Html.TextBoxFor(x => x.ID, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                <label for="AD" class="control-label">Ad:</label>
+                @Html.TextBoxFor(x => x.AD, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                <label for="SOYAD" class="control-label">Soyad:</label>
+                @Html.TextBoxFor(x => x.SOYAD, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                <label for="KULLANICIADI" class="control-label">Kullanıcı Adı:</label>
+                @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                <label for="SIFRE" class="control-label">Şifre:</label>
+                @Html.TextBoxFor(x => x.SIFRE, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-warning">Güncelle</button>
+            </div>
+        }
+    </div>
+</body>
+</html>
