--- a/WebApplication2/Views/Uye/Index.cshtml
+++ b/WebApplication2/Views/Uye/Index.cshtml
@@ -9,7 +9,11 @@
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<h2>Index</h2>
+<h2 style=" text-align:center;
+    background-color:cadetblue;
+    padding:15px;
+    border-radius:9px;
+">UYELER</h2>
 
 
 <table class="table table-bordered">
