--- a/WebApplication2/Views/Yazar/Index.cshtml
+++ b/WebApplication2/Views/Yazar/Index.cshtml
@@ -6,7 +6,15 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<h2 style="text-align:center">Yazarlar</h2>
+<h2 style="
+    text-align:center;
+    background-color:cadetblue;
+    padding:15px;
+    border-radius:9px;
+    
+    
+    
+    ">Yazarlar</h2>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -34,7 +42,5 @@
         </tr>
     }
 </table>
-
-
 
 <a class="btn btn-primary" href="/Yazar/YazarEkle/"> Yeni Yazar Ekle</a>
