--- a/WebApplication2/Views/Shared/_LayoutPanel.cshtml
+++ b/WebApplication2/Views/Shared/_LayoutPanel.cshtml
@@ -35,13 +35,13 @@
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading">AD SOYAD </div>
+           
             <div class="list-group list-group-flush">
-                <a href="/Profilim/Index" class="list-group-item list-group-item-action bg-light">PROFILIM</a>
+                <a href="/Panelim/Index" class="list-group-item list-group-item-action bg-light">PROFILIM</a>
                 <a href="/Mesajlar/Index" class="list-group-item list-group-item-action bg-light">GELEN MESAJLAR</a>
                 <a href="/Mesajlar/Giden" class="list-group-item list-group-item-action bg-light">GIDEN MESAJLAR</a>
                 <a href="/Mesajlar/YeniMesaj" class="list-group-item list-group-item-action bg-light"> YENI MESAJLAR</a>
-                <a href="/Duyurular/Index" class="list-group-item list-group-item-action bg-light">DUYURULAR</a>
+                <a href="/Kitap/Index" class="list-group-item list-group-item-action bg-light">UYGULAMA</a>
                 <a href="/Panelim/Kitaplarim" class="list-group-item list-group-item-action bg-light">KITAPLARIM</a>
                 <a href="/Vitrin/Index" class="list-group-item list-group-item-action bg-light">VITRIN</a>
                 <a href="/Panelim/LogOut/" class="list-group-item list-group-item-action bg-light">Cikis Yap</a>
