--- a/WebApplication2/Views/Uye/Index.cshtml
+++ b/WebApplication2/Views/Uye/Index.cshtml
@@ -16,20 +16,20 @@
 ">UYELER</h2>
 
 
-<table class="table table-bordered">
+<table  style="background-color:rgb(252,178,22)" class="table table-striped">
 
     <tr>
-        <td>UYE ID</td>
-        <td>ADI</td>
-        <td>SOYADI</td>
-        <td>KULLANICI ADI</td>
-        <td>MAIL</td>
-        <td>SIFRE</td>
-        <td>TELEFON</td>
-        <td>FOTOGRAF</td>
-        <td>OKUL</td>
-        <td>SIL</td>
-        <td>GUNCELLE</td>
+        <td  style="background-color:rgb(252,178,22)">UYE ID</td>
+        <td style="background-color:rgb(252,178,22)">ADI</td>
+        <td style="background-color:rgb(252,178,22)">SOYADI</td>
+        <td style="background-color:rgb(252,178,22)">KULLANICI ADI</td>
+        <td style="background-color:rgb(252,178,22)">MAIL</td>
+        <td style="background-color:rgb(252,178,22)">SIFRE</td>
+        <td style="background-color:rgb(252,178,22)">TELEFON</td>
+        <td style="background-color:rgb(252,178,22)">FOTOGRAF</td>
+        <td style="background-color:rgb(252,178,22)">OKUL</td>
+        <td style="background-color:rgb(252,178,22)">SIL</td>
+        <td style="background-color:rgb(252,178,22)">GUNCELLE</td>
 
     </tr>
     @foreach (var u in Model)
