--- a/WebApplication2/Views/Duyurular/Index.cshtml
+++ b/WebApplication2/Views/Duyurular/Index.cshtml
@@ -23,14 +23,14 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<table class="table table-bordered">
+<table style="background-color:rgb(252,178,22)" class="table table-striped">
     <tr>
-        <th>Duyuru No</th>
-        <th>Kategoriler</th>
-        <th>Tarih</th>
-        <th>Icerik</th>
-        <th>Sil</th>
-        <th>Guncelle</th>
+        <th style="background-color:rgb(252,178,22)">Duyuru No</th>
+        <th style="background-color:rgb(252,178,22)">Kategoriler</th>
+        <th style="background-color:rgb(252,178,22)">Tarih</th>
+        <th style="background-color:rgb(252,178,22)">Icerik</th>
+        <th style="background-color:rgb(252,178,22)">Sil</th>
+        <th style="background-color:rgb(252,178,22)">Guncelle</th>
 
     </tr>
 
