--- a/WebApplication2/Views/Personel/Index.cshtml
+++ b/WebApplication2/Views/Personel/Index.cshtml
@@ -6,14 +6,22 @@
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<h2 style=" text-align :center">Personel</h2>
 
-<table class="table table-header-dark">
+<h2 style=" text-align:center;
+    background-color:cadetblue;
+    padding:15px;
+    border-radius:9px;
+">
+    Personel
+</h2>
+
+
+<table style="background-color:rgb(252,178,22)" class="table table-striped">
     <tr>
-        <td>ID</td>
-        <td>PERSONEL</td>
-        <td>Sil</td>
-        <td>Guncelle</td>
+        <td style="background-color:rgb(252,178,22)">ID</td>
+        <td style="background-color:rgb(252,178,22)">PERSONEL</td>
+        <td style="background-color:rgb(252,178,22)">Sil</td>
+        <td style="background-color:rgb(252,178,22)">Guncelle</td>
     </tr>
 
     @foreach (var prs in Model)
