Son Tasarım Düzenlemeleri

--- a/WebApplication2/Views/Mesajlar/Index.cshtml
+++ b/WebApplication2/Views/Mesajlar/Index.cshtml
@@ -11,10 +11,10 @@
 <table class="table table-hover">
 
     <tr>
-        <th>Gonderen</th>
+        <th>Gönderen</th>
         <th>Konu</th>
         <th>Mesaj</th>
-        <th>Islem</th>
+        <th>İslem</th>
     </tr>
 
 
