--- a/WebApplication2/Views/Shared/Layout.cshtml
+++ b/WebApplication2/Views/Shared/Layout.cshtml
@@ -56,19 +56,19 @@
             <li><a href="/Kategori/Index/">Kategoriler</a></li>
             <li><a href="/Kitap/Index/">Kitaplar</a></li>
             <li><a href="/Yazar/Index/">Yazarlar</a></li>
-            <li><a href="/Uye/Index/">Uyeler</a></li>
+            <li><a href="/Uye/Index/">Üyeler</a></li>
             <li><a href="/Personel/Index/">Personeller</a></li>
-            <li><a href="/Odunc/OduncVer/">Odunc Kitap Ver</a></li>
-            <li><a href="/Odunc/Index">Odunc Kitap Al</a></li>
+            <li><a href="/Odunc/OduncVer/">Ödünç Kitap Ver</a></li>
+            <li><a href="/Odunc/Index">Ödünç Kitap Al</a></li>
             <li><a href="/Duyurular/Index">Duyurular</a></li>
-            <li><a href="/istatistik/Index">Istatistik</a></li>
+            <li><a href="/istatistik/Index">İstatistik</a></li>
             <li><a href="/istatistik/Hava/">Hava Durumu</a></li>
             <li><a href="/istatistik/HavaKart/">Hava Kartlari</a></li>
             <li><a href="/istatistik/Galeri/">Galeri</a></li>
          
             <li><a href="/vitrin/Index">Vitrin</a></li>
         
-            <li><a href="#">Cikis</a></li>
+            <li><a href="#">Çıkış</a></li>
         </ul>
     </div>
     <div class="content">
