--- a/WebApplication2/Views/Shared/_LayoutPanel.cshtml
+++ b/WebApplication2/Views/Shared/_LayoutPanel.cshtml
@@ -37,7 +37,7 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
            
             <div class="list-group list-group-flush">
-                <a href="/Panelim/Index" class="list-group-item list-group-item-action bg-light">PROFILIM</a>
+                <a href="/Panelim/Index" class="list-group-item list-group-item-action bg-light">PROFİLİM</a>
                 <a href="/Mesajlar/Index" class="list-group-item list-group-item-action bg-light">GELEN MESAJLAR</a>
                 <a href="/Mesajlar/Giden" class="list-group-item list-group-item-action bg-light">GIDEN MESAJLAR</a>
                 <a href="/Mesajlar/YeniMesaj" class="list-group-item list-group-item-action bg-light"> YENI MESAJLAR</a>
