--- a/WebApplication2/Views/vitrin/Index.cshtml
+++ b/WebApplication2/Views/vitrin/Index.cshtml
@@ -35,7 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Kutuphane V0.1</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Kütüphane V0.1</a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -46,13 +46,13 @@
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Kitaplarimiz</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Hakkimizda</a>/
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Hakkimizda</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Iletisim</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">İletişim</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/Login/GirisYap">Login</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/Login/GirisYap">Giriş</a>
                     </li>
                 </ul>
             </div>
@@ -64,10 +64,12 @@
         <div class="container d-flex align-items-center flex-column">
 
             <!-- Masthead Avatar Image -->
-            <img class="masthead-avatar mb-5" src="~/web/img/avataaars.svg" alt="">
-
+            <div class="circle">
+                <img class="masthead-avatar mb-5" src="~/web/img/martin.jpg" alt="">
+            </div>
+           
             <!-- Masthead Heading -->
-            <h1 class="masthead-heading text-uppercase mb-0">KUTUPHANEMIZE Hos Geldiniz</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Kütüphane Giriş</h1>
 
             <!-- Icon Divider -->
             <div class="divider-custom divider-light">
@@ -79,7 +81,10 @@
             </div>
 
             <!-- Masthead Subheading -->
-            <p class="masthead-subheading font-weight-light mb-0">Cicek Dolu bur bahce , kitap dolu bir ev .... </p>
+            <p class="masthead-subheading font-weight-light mb-0">Buralara nereden geldiğimi biliyorum, <br />
+            gidecek daha çok yolumun olduğunuda biliyorum 
+            ve gerekirse dizlerimin üstünde sürünerek de olsa oraya gideceğim 
+            <br />Martin Eden - Jack London</p>
 
         </div>
     </header>
@@ -570,3 +575,11 @@
 </body>
 
 </html>
+<style>
+    .circle {
+        width: 200px; /* Dairenin genişliği */
+        height: 200px; /* Dairenin yüksekliği */
+        border-radius: 50%; /* Yuvarlak border */
+        overflow: hidden; /* Resmin dışında kalan kısmı gizler */
+    }
+</style>
